# ChrysostomLens

./: .dockerignore  .env_example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-local-embeddings.txt  requirements.txt
frontend/: index.html  package-lock.json
frontend/src/: App.jsx  index.css
src/chrysostom_lens/: __init__.py  chat.py  cli.py  config.py  indexing.py  models.py  parsing.py  pipeline.py  server.py  synthesis.py
