[project]
name = "chrysostom-lens"
version = "0.1.0"
description = "Hierarchical global-to-local RAG over St. John Chrysostom's Homilies on Matthew."
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.11.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "google-genai>=1.0.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "faiss-cpu>=1.8.0",
    "langchain-huggingface>=0.1.0",
    "groq>=0.9.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
local-embeddings = [
    "sentence-transformers>=3.0.0",
]

[project.scripts]
chrysostom-lens = "chrysostom_lens.cli:main"

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
